# smoke-detector

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  adc.c  alarm.c  button.c  buzzer.c  clock.c  led.c  lnk_msp430fr2311.cmd  main.c  msp430-elf-gcc.cmake  settings.c  smokedetector.h  string.c  timer.c  uart.c  watchdog.c  zigbee.c  烟雾报警器串口通信协议.md
.github/workflows/: build.yml  main.yml
.launches/: smoke-detector.launch
Debug/: adc.d  alarm.d  button.d  buzzer.d  ccsObjs.opt  clock.d  command.d  led.d  main.d  makefile  smoke-detector.map  smoke-detector.out  smoke-detector_linkInfo.xml  subdir_rules.mk  subdir_vars.mk  timer.d  timerb0.d  uart.d  watchdog.d  zigbee.d
targetConfigs/: MSP430FR2311.ccxml
